--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=postgres
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.converters.preferred-json-mapper=gson
+spring.gson.enable-complex-map-key-serialization=true
+spring.gson.serialize-nulls=true
