--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+.gradle.properties
+.gradle-wrapper.properties
 
 ### STS ###
 .apt_generated
@@ -35,3 +37,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Dev Secrets ###
+secrets.properties
