--- a/authServer/conf/keycloak.conf
+++ b/authServer/conf/keycloak.conf
@@ -5,10 +5,10 @@
 # The database vendor.
 #db=postgres
 
-# The username of the database user.
+# The username of the database userEntity.
 #db-username=keycloak
 
-# The password of the database user.
+# The password of the database userEntity.
 #db-password=password
 
 # The full database JDBC URL. If not provided, a default URL is set based on the selected database vendor.
