--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: "http://localhost:8080/realms/ludotheque"
-          jwk-set-uri: "http://localhost:8080/realms/ludotheque/.well-known/openid-configuration"
+          jwk-set-uri: "http://localhost:8080/realms/ludotheque/protocol/openid-connect/certs"
   application:
-    name: "ludotheque"
+    name: ludotheque
   datasource:
     url: "jdbc:postgresql://localhost:5432/postgres"
     username: "postgres"
@@ -18,13 +18,21 @@ spring:
       maximum-pool-size: 5
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+    defer-datasource-initialization: true
+    show-sql: true
+
+
   mvc:
     converters:
       preferred-json-mapper: gson
   gson:
     enable-complex-map-key-serialization: true
     serialize-nulls: true
+  sql:
+    init:
+      mode: always
+      continue-on-error: true
 logging:
   level:
-    root: debug
+    root: info
