--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,14 @@ protobuf {
         grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
     }
     generateProtoTasks {
+        all().each {task ->
+            task.builtins {
+                js {
+                    option "import_style=commonjs"
+                    option "binary"
+                }
+            }
+        }
         all()*.plugins {
             grpc {
                 option '@generated=omit'
