--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,15 +31,15 @@ protobuf {
     }
     plugins {
         grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
+        ts { path = 'C:/code/ludotheque/frontend/node_modules/.bin/protoc-gen-ts_proto.cmd'}
     }
     generateProtoTasks {
         all().each {task ->
-//            task.builtins {
-//                js {
-//                    option "import_style=commonjs"
-//                    option "binary"
-//                }
-//            }
+            task.plugins {
+                ts {
+                    option 'esModuleInterop=true'
+                }
+            }
         }
         all()*.plugins {
             grpc {
