--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^19.0.0",
     "google-protobuf": "^3.21.4",
     "keycloak-js": "26.0.6",
+    "protobufjs": "^7.4.0",
     "rxjs": "~7.8.0",
+    "ts-proto": "^2.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
