--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,3 +1,5 @@
+import java.nio.file.Files
+
 plugins {
     id 'java'
     id 'idea'
@@ -31,7 +33,7 @@ protobuf {
     }
     plugins {
         grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
-        ts { path = 'C:/code/ludotheque/frontend/node_modules/.bin/protoc-gen-ts_proto.cmd'}
+        ts { path = 'D:/code/ludotheque/frontend/node_modules/.bin/protoc-gen-ts_proto.cmd'}
     }
     generateProtoTasks {
         all().each {task ->
@@ -56,6 +58,12 @@ sourceSets {
             srcDirs 'build/generated/source/proto/main/java'
         }
     }
+}
+
+tasks.register('copyTypescriptProtoDefinitions') {
+    def originFilePath = new File("D:\\code\\ludotheque\\backend\\build\\generated\\source\\proto\\main\\ts\\ludotheque.ts")
+    def targetPath = new File("D:\\code\\ludotheque\\frontend\\src\\proto\\generated\\ludotheque.ts")
+    Files.copy(originFilePath.toPath(), targetPath.toPath())
 }
 
 dependencies {
