--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,7 +33,7 @@ protobuf {
     }
     plugins {
         grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
-        ts { path = 'C:/code/ludotheque/frontend/node_modules/.bin/protoc-gen-ts_proto.cmd'}
+        ts { path = 'D:/code/ludotheque/frontend/node_modules/.bin/protoc-gen-ts_proto.cmd'}
     }
     generateProtoTasks {
         all().each {task ->
